--- a/K8S/service.yml
+++ b/K8S/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hotstar-service
+  name: hotstar1-service
 spec:
   selector:
-    app: hotstar
+    app: hotstar1
   ports:
     - protocol: TCP
       port: 80  # Port exposed by the service externally (outside the cluster)
